@@ -2,10 +2,14 @@ package gov.uk.courtdata.integration.assessment;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
 
+import com.jayway.jsonpath.JsonPath;
 import gov.uk.MAATCourtDataApplication;
 import gov.uk.courtdata.assessment.mapper.PassportAssessmentMapper;
 import gov.uk.courtdata.builder.TestEntityDataBuilder;
@@ -21,19 +25,25 @@ import gov.uk.courtdata.model.assessment.CreatePassportAssessment;
 import gov.uk.courtdata.model.assessment.UpdatePassportAssessment;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
+import org.springframework.test.context.bean.override.mockito.MockitoSpyBean;
 import org.springframework.test.web.servlet.MvcResult;
 
 @SpringBootTest(classes = {MAATCourtDataApplication.class})
-public class PassportAssessmentControllerIntegrationTest extends MockMvcIntegrationTest {
+class PassportAssessmentControllerIntegrationTest extends MockMvcIntegrationTest {
 
     private final String BASE_URL = "/api/internal/v1/assessment/passport-assessments";
+    private final String BASE_V2_URL = "/api/internal/v2/assessment/passport-assessments";
     private final String ASSESSMENT_URL = BASE_URL + "/{passportAssessmentId}";
     private final String ASSESSMENT_BY_REP_ID_URL = BASE_URL + "/repId/{repId}";
     private final Integer INVALID_ASSESSMENT_ID = 999;
@@ -41,12 +51,15 @@ public class PassportAssessmentControllerIntegrationTest extends MockMvcIntegrat
     @Autowired
     private PassportAssessmentMapper passportAssessmentMapper;
 
+    @MockitoSpyBean
+    private gov.uk.courtdata.passport.mapper.PassportAssessmentMapper passportMapperV2;
+
     private PassportAssessmentEntity existingPassportAssessmentEntity;
     private FinancialAssessmentEntity existingFinancialAssessmentEntity;
     private PassportAssessmentEntity completePassportAssessmentEntity;
 
     @BeforeEach
-    public void setUp() throws Exception {
+    void setUp() throws Exception {
         setupTestData();
     }
 
@@ -98,24 +111,24 @@ public class PassportAssessmentControllerIntegrationTest extends MockMvcIntegrat
     }
 
     @Test
-    public void givenAZeroAssessmentId_whenGetAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAZeroAssessmentId_whenGetAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         assertTrue(runBadRequestErrorScenario("Passport Assessment Id is required", get(ASSESSMENT_URL, 0)));
     }
 
     @Test
-    public void givenAnInvalidAssessmentId_whenGetAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAnInvalidAssessmentId_whenGetAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         assertTrue(runBadRequestErrorScenario(String.format("%d is invalid", INVALID_ASSESSMENT_ID), get(ASSESSMENT_URL, INVALID_ASSESSMENT_ID)));
     }
 
     @Test
-    public void givenAValidAssessmentId_whenGetAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAValidAssessmentId_whenGetAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         assertTrue(runSuccessScenario(
                 passportAssessmentMapper.passportAssessmentEntityToPassportAssessmentDTO(existingPassportAssessmentEntity),
                 get(ASSESSMENT_URL, existingPassportAssessmentEntity.getId())));
     }
 
     @Test
-    public void givenAnInvalidRepId_whenGetAssessmentByRepIdIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAnInvalidRepId_whenGetAssessmentByRepIdV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         Integer invalidRepId = 0;
         assertTrue(runNotFoundErrorScenario(
                 String.format("No Passport Assessment found for REP ID: %s", invalidRepId),
@@ -123,54 +136,54 @@ public class PassportAssessmentControllerIntegrationTest extends MockMvcIntegrat
     }
 
     @Test
-    public void givenAValidRepId_whenGetAssessmentByRepIdIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAValidRepId_whenGetAssessmentByRepIdV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         assertTrue(runSuccessScenario(
                 passportAssessmentMapper.passportAssessmentEntityToPassportAssessmentDTO(existingPassportAssessmentEntity),
                 get(ASSESSMENT_BY_REP_ID_URL, existingPassportAssessmentEntity.getRepOrder().getId())));
     }
 
     @Test
-    public void givenAMissingRepId_whenCreateAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAMissingRepId_whenCreateAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         assertTrue(runCreatePassportAssessmentErrorScenario("Rep Order ID is required", CreatePassportAssessment.builder().build()));
     }
 
     @Test
-    public void givenAMissingCmuId_whenCreateAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAMissingCmuId_whenCreateAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         assertTrue(runCreatePassportAssessmentErrorScenario(
                 "Case Management Unit (CMU) ID is required",
                 CreatePassportAssessment.builder().repId(1).build()));
     }
 
     @Test
-    public void givenAMissingNewWorkReasonCode_whenCreateAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAMissingNewWorkReasonCode_whenCreateAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         assertTrue(runCreatePassportAssessmentErrorScenario(
                 "New Work Reason (NWOR) code is required",
                 CreatePassportAssessment.builder().repId(1).cmuId(2).build()));
     }
 
     @Test
-    public void givenAMissingPastStatus_whenCreateAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAMissingPastStatus_whenCreateAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         assertTrue(runCreatePassportAssessmentErrorScenario(
                 "Past Status is required",
                 CreatePassportAssessment.builder().repId(1).cmuId(2).nworCode("FMA").build()));
     }
 
     @Test
-    public void givenAMissingUserCreated_whenCreateAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAMissingUserCreated_whenCreateAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         assertTrue(runCreatePassportAssessmentErrorScenario(
                 "Username is required",
                 CreatePassportAssessment.builder().repId(1).cmuId(2).nworCode("FMA").pastStatus("test").build()));
     }
 
     @Test
-    public void givenAMissingFinancialAssessmentId_whenCreateAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAMissingFinancialAssessmentId_whenCreateAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         assertTrue(runCreatePassportAssessmentErrorScenario(
                 "Financial Assessment ID is required",
                 CreatePassportAssessment.builder().repId(1).cmuId(2).nworCode("FMA").pastStatus("test").userCreated("test").build()));
     }
 
     @Test
-    public void givenAValidPassportAssessmentBody_whenCreateAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAValidPassportAssessmentBody_whenCreateAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         Integer repId = existingPassportAssessmentEntity.getRepOrder().getId();
         CreatePassportAssessment body = TestModelDataBuilder.getCreatePassportAssessment();
         body.setRepId(repId);
@@ -207,15 +220,15 @@ public class PassportAssessmentControllerIntegrationTest extends MockMvcIntegrat
             repos.passportAssessment.findAll()
                         .stream()
                         .filter(assessment -> assessment.getRepOrder().getId().equals(repId))
-                        .collect(Collectors.toList());
+                        .toList();
 
-        assertThat(matchingPassportAssessments.size()).isEqualTo(2);
+        assertThat(matchingPassportAssessments).hasSize(2);
 
         List<PassportAssessmentEntity> newPassportAssessments =
                 matchingPassportAssessments
-                        .stream().filter(assessment -> assessment.getReplaced().equals("N")).collect(Collectors.toList());
+                        .stream().filter(assessment -> assessment.getReplaced().equals("N")).toList();
 
-        assertThat(newPassportAssessments.size()).isEqualTo(1);
+        assertThat(newPassportAssessments).hasSize(1);
 
         PassportAssessmentEntity createdPassportAssessment = newPassportAssessments.get(0);
 
@@ -230,34 +243,99 @@ public class PassportAssessmentControllerIntegrationTest extends MockMvcIntegrat
         assertThat(objectMapper.writeValueAsString(expectedResponse)).isEqualTo(result.getResponse().getContentAsString());
     }
 
+    /** Truth Table for variations.
+     * Covers main routes of the mapping/saving/partnerId population.
+     */
+    private static Stream<Arguments> createAssessmentV2Conditions() {
+        return Stream.of(
+                Arguments.of(true, true, true ),
+                Arguments.of(true, true, false ),
+                Arguments.of(true, false, true ),
+                Arguments.of(true, false, false ),
+                Arguments.of(false, true, true ),
+                Arguments.of(false, true, false ),
+                Arguments.of(false, false, true),
+                Arguments.of(false, false, false)
+        );
+    }
+
+    @ParameterizedTest
+    @MethodSource("createAssessmentV2Conditions")
+    void givenFullRequest_whenCreateAssessmentV2IsInvoked_theCorrectResponseIsReturned(boolean isUnder18, boolean hasDeclaredBenefits, boolean populatePartner) throws Exception {
+
+        Integer repId = existingPassportAssessmentEntity.getRepOrder().getId();
+        Integer partnerId = (populatePartner? repos.applicantRepository.save(TestEntityDataBuilder.getApplicant(TestEntityDataBuilder.APPLICANT_ID)).getId() : null);
+
+        var request = TestModelDataBuilder.buildValidPopulatedCreatePassportedAssessmentRequest(repId, partnerId, isUnder18, hasDeclaredBenefits);
+
+        // add watchers to allow mapper verification. Can rely on mapper tests.
+        when(passportMapperV2.toPassportAssessmentEntity(any())).thenCallRealMethod();
+        when(passportMapperV2.toApiCreatePassportedAssessmentResponse(any())).thenCallRealMethod();
+
+        MvcResult result =
+                runSuccessScenario(post(BASE_V2_URL).contentType(MediaType.APPLICATION_JSON).content(objectMapper.writeValueAsString(request)));
+        Integer createdId = JsonPath.parse(result.getResponse().getContentAsString()).read("$.legacyAssessmentId");
+
+        List<PassportAssessmentEntity> passportAssessments = repos.passportAssessment.findAll().stream()
+                .filter(assessment -> repId.equals(assessment.getRepOrder().getId()))
+                .toList();
+
+        // check we've set all old passported assessments to replaced.
+        assertThat(passportAssessments.stream().filter(x-> "Y".equals(x.getReplaced()))
+                .map(PassportAssessmentEntity::getId).toList()).doesNotContain(createdId).hasSize(passportAssessments.size()-1);
+        // check the id is correct and saved.
+        assertThat(passportAssessments.stream().filter(x-> "N".equals(x.getReplaced()))
+                .map(PassportAssessmentEntity::getId).toList()).contains(createdId).hasSize(1);
+
+
+        // check the old financial has been replaced.
+        assertThat(repos.financialAssessment.findAll().stream()
+                .filter(x -> x.getRepOrder().getId().equals(repId))
+                .filter(x->"Y".equals(x.getReplaced()))).hasSize(1);
+        assertThat(repos.financialAssessment.findAll().stream()
+                .filter(x -> x.getRepOrder().getId().equals(repId))
+                .filter(x->"N".equals(x.getReplaced()))).isEmpty();
+        // check old hardship reviews have been replaced.
+        assertThat(repos.hardshipReview.findAll().stream()
+                .filter(x -> x.getRepId().equals(repId))
+                .filter(x->"Y".equals(x.getReplaced()))).hasSize(1);
+        assertThat(repos.hardshipReview.findAll().stream()
+                .filter(x -> x.getRepId().equals(repId))
+                .filter(x->"N".equals(x.getReplaced()))).isEmpty();
+
+        // validate mapper is being called.
+        verify(passportMapperV2).toPassportAssessmentEntity(any());
+        verify(passportMapperV2).toApiCreatePassportedAssessmentResponse(any());
+    }
+
     @Test
-    public void givenAMissingRepId_whenUpdateAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAMissingRepId_whenUpdateAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         assertTrue(runUpdatePassportAssessmentErrorScenario("Rep Order ID is required", UpdatePassportAssessment.builder().build()));
     }
 
     @Test
-    public void givenAMissingCmuId_whenUpdateAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAMissingCmuId_whenUpdateAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         assertTrue(runUpdatePassportAssessmentErrorScenario(
                 "Case Management Unit (CMU) ID is required",
                 UpdatePassportAssessment.builder().repId(1).build()));
     }
 
     @Test
-    public void givenAMissingNewWorkReasonCode_whenUpdateAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAMissingNewWorkReasonCode_whenUpdateAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         assertTrue(runUpdatePassportAssessmentErrorScenario(
                 "New Work Reason (NWOR) code is required",
                 UpdatePassportAssessment.builder().repId(1).cmuId(2).build()));
     }
 
     @Test
-    public void givenAMissingPastStatus_whenUpdateAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAMissingPastStatus_whenUpdateAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         assertTrue(runUpdatePassportAssessmentErrorScenario(
                 "Past Status is required",
                 UpdatePassportAssessment.builder().repId(1).cmuId(2).nworCode("FMA").build()));
     }
 
     @Test
-    public void givenAMissingUserModified_whenUpdateAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAMissingUserModified_whenUpdateAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         assertTrue(runUpdatePassportAssessmentErrorScenario(
                 "Username is required",
                 UpdatePassportAssessment.builder()
@@ -266,28 +344,28 @@ public class PassportAssessmentControllerIntegrationTest extends MockMvcIntegrat
     }
 
     @Test
-    public void givenAMissingPassportAssessmentId_whenUpdateAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAMissingPassportAssessmentId_whenUpdateAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         assertTrue(runUpdatePassportAssessmentErrorScenario(
                 "Passport Assessment Id is required",
                 UpdatePassportAssessment.builder().repId(1).cmuId(2).nworCode("FMA").pastStatus("test").build()));
     }
 
     @Test
-    public void givenAPassportAssessmentIdThatDoesNotExist_whenUpdateAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAPassportAssessmentIdThatDoesNotExist_whenUpdateAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         assertTrue(runUpdatePassportAssessmentErrorScenario(
                 String.format("%d is invalid", INVALID_ASSESSMENT_ID),
                 UpdatePassportAssessment.builder().repId(1).cmuId(2).nworCode("FMA").pastStatus("test").id(INVALID_ASSESSMENT_ID).build()));
     }
 
     @Test
-    public void givenAZeroPassportAssessmentId_whenUpdateAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAZeroPassportAssessmentId_whenUpdateAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         assertTrue(runUpdatePassportAssessmentErrorScenario(
                 "Passport Assessment Id is required",
                 UpdatePassportAssessment.builder().repId(1).cmuId(2).nworCode("FMA").pastStatus("test").id(0).build()));
     }
 
     @Test
-    public void givenACompleteAssessmentToUpdate_whenUpdateAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenACompleteAssessmentToUpdate_whenUpdateAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         UpdatePassportAssessment body = TestModelDataBuilder.getUpdatePassportAssessment();
         body.setRepId(completePassportAssessmentEntity.getRepOrder().getId());
         body.setId(completePassportAssessmentEntity.getId());
@@ -297,7 +375,7 @@ public class PassportAssessmentControllerIntegrationTest extends MockMvcIntegrat
 
     @Test
     @Disabled("This test will fail until LCAM-89 is fixed.")
-    public void givenAValidPassportAssessmentBody_whenUpdateAssessmentIsInvoked_theCorrectResponseIsReturned() throws Exception {
+    void givenAValidPassportAssessmentBody_whenUpdateAssessmentV1IsInvoked_theCorrectResponseIsReturned() throws Exception {
         Integer id = existingPassportAssessmentEntity.getId();
         Integer repId = existingPassportAssessmentEntity.getRepOrder().getId();
         UpdatePassportAssessment body = TestModelDataBuilder.getUpdatePassportAssessment();
@@ -319,9 +397,9 @@ public class PassportAssessmentControllerIntegrationTest extends MockMvcIntegrat
             repos.passportAssessment.findAll()
                         .stream()
                         .filter(assessment -> assessment.getRepOrder().getId().equals(repId))
-                        .collect(Collectors.toList());
+                        .toList();
 
-        assertThat(matchingPassportAssessments.size()).isEqualTo(1);
+        assertThat(matchingPassportAssessments).hasSize(1);
 
         PassportAssessmentEntity updatedPassportAssessment = matchingPassportAssessments.get(0);
 
@@ -380,4 +458,8 @@ public class PassportAssessmentControllerIntegrationTest extends MockMvcIntegrat
                 errorMessage,
                 put(BASE_URL).contentType(MediaType.APPLICATION_JSON).content(objectMapper.writeValueAsString(body)));
     }
+
+
+
+
 }
